Skip to content

[oss-fuzz 5096402000871424] mkv: leak dual CodecPrivate definition

Ref.:

==403==ERROR: LeakSanitizer: detected memory leaks

Direct leak of 5 byte(s) in 1 object(s) allocated from:
    #0 0x5640628a8214 in __interceptor_malloc /src/llvm-project/compiler-rt/lib/asan/asan_malloc_linux.cpp:67:3
    #1 0x564062c452fc in KaxCodecPrivate_handler /src/vlc/modules/demux/mkv/matroska_segment_parse.cpp:380:64
    #2 0x564062c452fc in mkv::matroska_segment_c::ParseTrackEntry(libmatroska::KaxTrackEntry const*)::MetaDataHandlers::KaxCodecPrivate_callback(libebml::EbmlElement*, void*) /src/vlc/modules/demux/mkv/matroska_segment_parse.cpp:375:9
    #3 0x564062c3e19d in iterate<std::__1::__wrap_iter<libebml::EbmlElement *const *> > /src/vlc/modules/demux/mkv/dispatcher.hpp:45:50
    #4 0x564062c3e19d in mkv::matroska_segment_c::ParseTrackEntry(libmatroska::KaxTrackEntry const*) /src/vlc/modules/demux/mkv/matroska_segment_parse.cpp:1066:36
    #5 0x564062c3fd6d in iterate<std::__1::__wrap_iter<libebml::EbmlElement **> > /src/vlc/modules/demux/mkv/dispatcher.hpp:45:50
    #6 0x564062c3fd6d in mkv::matroska_segment_c::ParseTracks(libmatroska::KaxTracks*) /src/vlc/modules/demux/mkv/matroska_segment_parse.cpp:1143:33
    #7 0x564062c21b98 in mkv::matroska_segment_c::Preload() /src/vlc/modules/demux/mkv/matroska_segment.cpp:598:17
    #8 0x564062c79521 in mkv::demux_sys_t::AnalyseAllSegmentsFound(stream_t*, mkv::matroska_stream_c*) /src/vlc/modules/demux/mkv/demux.cpp:117:25
    #9 0x564062c00960 in mkv::OpenInternal(stream_t*, bool) /src/vlc/modules/demux/mkv/mkv.cpp:145:17
    #10 0x564062dca29a in demux_Probe /src/vlc/src/input/demux.c:112:15
    #11 0x564062d8aa20 in vlc_module_load /src/vlc/src/modules/modules.c:230:15
    #12 0x564062dc998d in demux_NewAdvanced /src/vlc/src/input/demux.c:196:20
    #13 0x564062dc902f in demux_New /src/vlc/src/input/demux.c:77:12
    #14 0x5640628ec439 in demux_process_stream /src/vlc/test/src/input/demux-run.c:300:22
    #15 0x5640628ec0ef in LLVMFuzzerTestOneInput /src/vlc/test/vlc-demux-libfuzzer.c:63:5
    #16 0x5640627898bd in fuzzer::Fuzzer::ExecuteCallback(unsigned char const*, unsigned long) /src/llvm-project/compiler-rt/lib/fuzzer/FuzzerLoop.cpp:619:13
    #17 0x564062774632 in fuzzer::RunOneTest(fuzzer::Fuzzer*, char const*, unsigned long) /src/llvm-project/compiler-rt/lib/fuzzer/FuzzerDriver.cpp:329:6
    #18 0x56406277a500 in fuzzer::FuzzerDriver(int*, char***, int (*)(unsigned char const*, unsigned long)) /src/llvm-project/compiler-rt/lib/fuzzer/FuzzerDriver.cpp:865:9
    #19 0x5640627a6032 in main /src/llvm-project/compiler-rt/lib/fuzzer/FuzzerMain.cpp:20:10
    #20 0x7dbef2ad1082 in __libc_start_main /build/glibc-LcI20x/glibc-2.31/csu/libc-start.c:308:16

Samples:

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information