demux: mkv: fix leak of KaxCodecPrivate

If the element appears twice in the same track, the previous value must be free'd
or properly discarded.

Fixes #29290